[tool.poetry]
name = "feedgenerator"
version = "2.1.0"
description = "Standalone version of django.utils.feedgenerator"
authors = ["Pelican Dev Team <authors@getpelican.com>"]
readme = "README.rst"
license = "BSD-3-Clause"
keywords = ["feed", "atom", "rss"]

[tool.autopub]
project-name = "feedgenerator"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
version-strings = ["setup.py"]
build-system = "setuptools"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
