[project]
name = "feedgenerator"
version = "2.2.0"
authors = [
    {name="Pelican Dev Team", email="authors@getpelican.com"},
]
description = "Standalone version of django.utils.feedgenerator"
keywords = ["feed", "atom", "rss"]
readme = "README.rst"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pelican",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "tzdata; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/getpelican/feedgenerator"
"Issue Tracker" = "https://github.com/getpelican/feedgenerator/issues"
Funding = "https://donate.getpelican.com/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.autopub]
project-name = "FeedGenerator"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"

[tool.pytest.ini_options]
addopts = """
    --cov=feedgenerator
    --cov=tests
    --cov-report=html
    --cov-report=term-missing:skip-covered
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
